@@ -1108,6 +1108,7 @@ OpenXML_POWER_POINT=Power Point
 OpenXML_TRANSLATE_SLIDE_COMMENTS=S&lide Comments
 OpenXML_TRANSLATE_SLIDE_MASTERS=Sli&de Masters
 OpenXML_TRANSLATE_SLIDE_LAYOUTS=Slide La&youts
+OpenXML_TRANSLATE_SLIDE_LINKS=Slide External Lin&ks
 OpenXML_GLOBAL=Global
 OpenXML_TRANSLATE_CHARTS=C&harts
 OpenXML_TRANSLATE_DIAGRAMS=D&iagrams
