@@ -1055,6 +1055,7 @@ OpenXML_POWER_POINT=Power Point
 OpenXML_TRANSLATE_SLIDE_COMMENTS=Commentaires des &diapositives
 OpenXML_TRANSLATE_SLIDE_MASTERS=Masque des diapositi&ves
 OpenXML_TRANSLATE_SLIDE_LAYOUTS=M&ise en page des diapositives
+OpenXML_TRANSLATE_SLIDE_LINKS=Liens e&xternes des diapositives
 OpenXML_GLOBAL=Globales
 OpenXML_TRANSLATE_CHARTS=Graphi&ques
 OpenXML_TRANSLATE_DIAGRAMS=Dia&grammes
