@@ -6,7 +6,7 @@
  Copyright (C) 2000-2006 Keith Godfrey and Maxym Mykhalchuk
                2007-2010 Didier Briel
                2010 Antonio Vilei
-               2011 Didier Briel
+               2011-2013 Didier Briel
                Home page: http://www.omegat.org/
                Support center: http://groups.yahoo.com/group/OmegaT/
 
@@ -72,6 +72,7 @@ public class EditOpenXMLOptionsDialog extends javax.swing.JDialog {
         translateSlideCommentsCB.setSelected(options.getTranslateSlideComments());
         translateSlideMastersCB.setSelected(options.getTranslateSlideMasters());
         translateSlideLayoutsCB.setSelected(options.getTranslateSlideLayouts());
+        translateSlideLinksCB.setSelected(options.getTranslateSlideLinks());
         translateChartsCB.setSelected(options.getTranslateCharts());
         translateDrawingsCB.setSelected(options.getTranslateDrawings());
         translateWordArtCB.setSelected(options.getTranslateWordArt());
@@ -132,6 +133,7 @@ public class EditOpenXMLOptionsDialog extends javax.swing.JDialog {
         translateSlideCommentsCB = new javax.swing.JCheckBox();
         translateSlideMastersCB = new javax.swing.JCheckBox();
         translateSlideLayoutsCB = new javax.swing.JCheckBox();
+        translateSlideLinksCB = new javax.swing.JCheckBox();
         jLabel7 = new javax.swing.JLabel();
         translateChartsCB = new javax.swing.JCheckBox();
         translateDiagramsCB = new javax.swing.JCheckBox();
@@ -179,7 +181,7 @@ public class EditOpenXMLOptionsDialog extends javax.swing.JDialog {
         org.openide.awt.Mnemonics.setLocalizedText(jLabel2, OStrings.getString("OpenDoc_TRANSLATE_ELEMENTS")); // NOI18N
         jPanel1.add(jLabel2);
 
-        jLabel3.setFont(new java.awt.Font("MS Sans Serif", 1, 11));
+        jLabel3.setFont(new java.awt.Font("MS Sans Serif", 1, 11)); // NOI18N
         jLabel3.setHorizontalAlignment(javax.swing.SwingConstants.CENTER);
         org.openide.awt.Mnemonics.setLocalizedText(jLabel3, OStrings.getString("OpenXML_WORD")); // NOI18N
         jPanel1.add(jLabel3);
@@ -237,7 +239,7 @@ public class EditOpenXMLOptionsDialog extends javax.swing.JDialog {
         });
         jPanel1.add(translateFootersCB);
 
-        jLabel4.setFont(new java.awt.Font("MS Sans Serif", 1, 11));
+        jLabel4.setFont(new java.awt.Font("MS Sans Serif", 1, 11)); // NOI18N
         jLabel4.setHorizontalAlignment(javax.swing.SwingConstants.CENTER);
         org.openide.awt.Mnemonics.setLocalizedText(jLabel4, OStrings.getString("OpenXML_EXCEL")); // NOI18N
         jPanel1.add(jLabel4);
@@ -259,7 +261,7 @@ public class EditOpenXMLOptionsDialog extends javax.swing.JDialog {
         });
         jPanel1.add(translateSheetNamesCB);
 
-        jLabel5.setFont(new java.awt.Font("MS Sans Serif", 1, 11));
+        jLabel5.setFont(new java.awt.Font("MS Sans Serif", 1, 11)); // NOI18N
         jLabel5.setHorizontalAlignment(javax.swing.SwingConstants.CENTER);
         org.openide.awt.Mnemonics.setLocalizedText(jLabel5, OStrings.getString("OpenXML_POWER_POINT")); // NOI18N
         jPanel1.add(jLabel5);
@@ -279,7 +281,10 @@ public class EditOpenXMLOptionsDialog extends javax.swing.JDialog {
         org.openide.awt.Mnemonics.setLocalizedText(translateSlideLayoutsCB, OStrings.getString("OpenXML_TRANSLATE_SLIDE_LAYOUTS")); // NOI18N
         jPanel1.add(translateSlideLayoutsCB);
 
-        jLabel7.setFont(new java.awt.Font("MS Sans Serif", 1, 11));
+        org.openide.awt.Mnemonics.setLocalizedText(translateSlideLinksCB, OStrings.getString("OpenXML_TRANSLATE_SLIDE_LINKS")); // NOI18N
+        jPanel1.add(translateSlideLinksCB);
+
+        jLabel7.setFont(new java.awt.Font("MS Sans Serif", 1, 11)); // NOI18N
         jLabel7.setHorizontalAlignment(javax.swing.SwingConstants.CENTER);
         org.openide.awt.Mnemonics.setLocalizedText(jLabel7, OStrings.getString("OpenXML_GLOBAL")); // NOI18N
         jPanel1.add(jLabel7);
@@ -337,9 +342,7 @@ public class EditOpenXMLOptionsDialog extends javax.swing.JDialog {
         getContentPane().add(jPanel1, java.awt.BorderLayout.CENTER);
 
         pack();
-        java.awt.Dimension screenSize = java.awt.Toolkit.getDefaultToolkit().getScreenSize();
-        java.awt.Dimension dialogSize = getSize();
-        setLocation((screenSize.width-dialogSize.width)/2,(screenSize.height-dialogSize.height)/2);
+        setLocationRelativeTo(null);
     }// </editor-fold>//GEN-END:initComponents
 
     private void preserveSpacesCBActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_preserveSpacesCBActionPerformed
@@ -395,6 +398,7 @@ public class EditOpenXMLOptionsDialog extends javax.swing.JDialog {
         options.setTranslateSlideComments(translateSlideCommentsCB.isSelected());
         options.setTranslateSlideMasters(translateSlideMastersCB.isSelected());
         options.setTranslateSlideLayouts(translateSlideLayoutsCB.isSelected());
+        options.setTranslateSlideLinks(translateSlideLinksCB.isSelected());
         options.setTranslateCharts(translateChartsCB.isSelected());
         options.setTranslateDrawings(translateDrawingsCB.isSelected());
         options.setTranslateWordArt(translateWordArtCB.isSelected());
@@ -465,6 +469,7 @@ public class EditOpenXMLOptionsDialog extends javax.swing.JDialog {
     private javax.swing.JCheckBox translateSheetNamesCB;
     private javax.swing.JCheckBox translateSlideCommentsCB;
     private javax.swing.JCheckBox translateSlideLayoutsCB;
+    private javax.swing.JCheckBox translateSlideLinksCB;
     private javax.swing.JCheckBox translateSlideMastersCB;
     private javax.swing.JCheckBox translateWordArtCB;
     // End of variables declaration//GEN-END:variables
